# voisu

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  README.md  SECURITY.md  index.html  voisu-archive-keyring.asc
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: apt-refresh.yml  ci.yml  copr-trigger.yml  release.yml  version-bump.yml
.scratch/voisu-accuracy/: map.md
.scratch/voisu-accuracy/assets/: 02-groq-deepgram-pricing.md
.scratch/voisu-accuracy/issues/: 01-deepgram-streaming-research.md  02-groq-pricing-benchmark.md  03-write-prd.md  04-impl-groq-accuracy.md  05-impl-deepgram-streaming.md  06-impl-reconciliation-and-visibility.md  07-acceptance-wer-suite.md
.scratch/voisu-friends/: handoff-prompt.md  map.md
.scratch/voisu-friends/assets/: 03-focus-tracking-research.md  06-keyring-service-probe.md
.scratch/voisu-friends/assets/06-keyring-probe/: INSTALL.md  keyring-probe.conf  voisu-keyring-probe.sh
.scratch/voisu-friends/issues/: 01-adr-gtk4-electron-rejection.md  02-delivery-mode-enum.md  03-research-focus-tracking.md  04-guarded-delivery-mode.md  05-dictionary-cli-hotreload.md  06-keyring-service-probe.md  07-setup-wizard-keyring.md  08-gnome-plain-window-fallback.md  09-packaging-accounts-setup.md  10-cargo-deb-package.md  11-aur-packages.md  12-copr-channel.md  13-apt-repo-channel.md  14-release-workflow-ci-smoke.md  15-live-desktop-validation.md
.scratch/voisu-hardening/: map.md
.scratch/voisu-hardening/assets/: audit-2026-07-18.md
.scratch/voisu-hardening/issues/: 01-supervise-process-recording.md  02-nonblocking-stop-child.md  03-systemd-unit-hardening.md  04-ci-audit-clippy-gate.md  05-daemon-hygiene-sweep.md
.scratch/voisu-implementation/: proposed-breakdown.md
.scratch/voisu-implementation/issues/: 01-prove-daemon-cli-lifecycle.md  02-verify-fedora-readiness.md  03-pipewire-groq-clipboard.md  04-concurrent-deepgram-deadline.md  05-reconcile-and-guard-transcript.md  06-correlated-local-diagnostics.md  07-global-shortcut-toggle.md  08-libei-delivery.md  09-systemd-user-service.md  10-recover-workflow-failures.md  11-gtk-voice-capsule.md  12-overlay-capability-fallback.md  13-package-fedora-release.md
.scratch/voisu-research/: 2026-07-18-distribution-decisions.md
.scratch/voisu-spec/issues/: 01-fedora-cloud-dictation.md
.scratch/voisu-wayfinder/: map.md
.scratch/voisu-wayfinder/issues/: 01-cloud-transcription.md  02-automatic-delivery.md  03-toggle-recording.md  04-final-only-delivery.md  05-rust-gtk-stack.md  06-independent-implementation.md  07-process-boundary.md  08-local-diagnostics.md  09-provider-deadline.md  10-portal-integration.md  11-cli-language.md  12-confirm-public-test-seam.md  13-approve-implementation-graph.md
crates/voisu-app/: Cargo.toml
crates/voisu-app/examples/: deepgram_probe.rs
crates/voisu-app/src/: audio_level.rs  config.rs  dictionary.rs  feedback.rs  focus.rs  history_view.rs  lib.rs  overlay.rs  process.rs  secret_file.rs  service.rs  setup.rs  system.rs
crates/voisu-app/tests/: daemon_cli_lifecycle.rs  delivery.rs  dictionary_cli.rs  service_cli.rs  version_flags.rs
crates/voisu-core/: Cargo.toml
crates/voisu-core/src/: diagnostics.rs  lib.rs  session.rs  wav.rs
crates/voisu-core/tests/: diagnostics.rs  focus_probe.rs  provider_coordination.rs  provider_key_status.rs  transcript_decision.rs
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
docs/: INDEX.md  ROADMAP.md  STATE.md  conventions.md  decisions.md  model-benchmark.md  old_context.md  packaging-fedora.md  release-evidence.md
docs/adr/: 0001-cloud-only-dual-provider-transcription.md  0002-build-an-independent-rust-application.md  0003-separate-daemon-and-overlay.md  0004-use-portals-instead-of-privileged-input-access.md  0005-stream-concurrently-with-a-bounded-quality-wait.md  0006-keep-diagnostics-local-and-audio-opt-in.md  0007-gtk4-overlay-electron-rejected.md
docs/research/: linux-platform.md
docs/sessions/: 2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md
docs/specs/: 2026-07-17-transcription-accuracy.md  2026-07-20-overlay-audio-waveform.md
docs/superpowers/plans/: 2026-07-17-overlay-login-start.md
docs/superpowers/specs/: 2026-07-17-overlay-login-start-design.md
packaging/: RELEASING.md  build-deb.sh  build-rpm.sh  build-srpm.sh  fedora-smoke.sh  rpm-lib.sh  voisu-overlay.service  voisu.desktop  voisu.service  voisu.spec
packaging/apt/: README.md  apt-e2e.sh  make-apt-repo.sh
packaging/aur/voisu/: .SRCINFO  PKGBUILD  voisu.install
packaging/aur/voisu-bin/: .SRCINFO  PKGBUILD  voisu-bin.install
packaging/ci/: aur-publish.sh  smoke-arch-bin.sh  smoke-arch.sh  smoke-fedora.sh  smoke-ubuntu.sh
packaging/copr/: make-srpm.sh
packaging/deb/: changelog  copyright  lintian-overrides  postinst  postrm
pool/main/v/voisu/: voisu_0.1.0-1_amd64.deb  voisu_0.1.1-1_amd64.deb  voisu_0.4.0-1_amd64.deb  voisu_0.4.1-1_amd64.deb  voisu_0.5.0-1_amd64.deb  voisu_0.6.0-1_amd64.deb
