[package]
name = "voisu-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "voisu"
path = "src/bin/voisu.rs"

[[bin]]
name = "voisu-daemon"
path = "src/bin/voisu-daemon.rs"

[[bin]]
name = "voisu-overlay"
path = "src/bin/voisu-overlay.rs"
required-features = ["overlay"]

[features]
overlay = ["dep:gtk4", "dep:gtk4-layer-shell"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
libc = "0.2"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
voisu-core = { path = "../voisu-core" }
xkbcommon = { version = "0.9", default-features = false }
zbus = { version = "5.13.2", default-features = false, features = ["tokio"] }
gtk4 = { version = "0.11", features = ["v4_10"], optional = true }
gtk4-layer-shell = { version = "0.8", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tungstenite = "0.24"
zbus = { version = "5.13.2", default-features = false, features = ["tokio"] }
