[package]
name = "voisu-app"
version = "0.3.0"
description = "Cloud-first Linux dictation for Wayland"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

# Debian/Ubuntu packaging (cargo-deb). Mirrors the Fedora RPM
# (packaging/voisu.spec): all three binaries plus both systemd *user* units in
# one package, no auto-enable (see packaging/deb/postinst). MUST be built on
# Ubuntu -- see packaging/build-deb.sh; the `$auto` depends below needs
# dpkg-shlibdeps to encode the real ELF/GLIBC requirements.
[package.metadata.deb]
name = "voisu"
maintainer = "Anuraj Jit Saikia <rajasaikia1644@gmail.com>"
section = "utils"
priority = "optional"
extended-description = """\
Voisu turns a bounded Recording into a validated Transcript and performs \
Delivery into the focused application, with clipboard preservation as the \
fallback. The daemon and CLI stay usable without GTK; the optional Overlay \
adds a separate on-screen status surface that reflects daemon state. The \
Trigger Key and Delivery use desktop portals."""
# `$auto` = dpkg-shlibdeps against the built ELF binaries: it encodes the real
# linked libraries and their version floors (libc6 with the GLIBC symbol floor,
# libgcc-s1, libxkbcommon0, and the GTK4/Pango/Cairo/GLib stack pulled in by the
# Overlay). The remaining entries are runtime tools Voisu execs or portal
# services it talks to -- not linked, so shlibdeps cannot see them -- mapped
# from the RPM Requires to their Ubuntu 24.10 package names:
#   (portals)            -> xdg-desktop-portal   (Trigger Key + Delivery)
#   pipewire-utils       -> pipewire-bin         (pw-record)
#   wireplumber          -> wireplumber          (wpctl)
#   wl-clipboard         -> wl-clipboard | xclip (Wayland uses wl-copy/wl-paste;
#                                                 X11 uses xclip. Either satisfies
#                                                 the dependency because the code
#                                                 picks the backend at runtime by
#                                                 session — a Debian/Ubuntu box may
#                                                 boot X11 or Wayland at the login
#                                                 screen. Fedora/Arch keep
#                                                 wl-clipboard only.)
#   /usr/bin/secret-tool -> libsecret-tools      (secret-tool binary)
#   curl                 -> curl                 (provider HTTPS/WSS)
depends = "$auto, xdg-desktop-portal, pipewire-bin, wireplumber, wl-clipboard | xclip, libsecret-tools, curl"
# libei is dlopen()'d by SONAME at runtime (an optional auto-type capability),
# never linked -- so it is Recommends, mirroring the RPM `Recommends: libei`.
recommends = "libei1"
# Overlay binary is feature-gated; build with the same feature the RPM uses.
features = ["overlay"]
maintainer-scripts = "../../packaging/deb"
# Generated per build by build-deb.sh so the changelog version always matches
# the computed Debian version (target/ is git-ignored).
changelog = "../../target/deb/changelog"
# Explicit assets. Binary sources use the literal `target/release/` prefix so
# cargo-deb recognizes them as Cargo build products (builds them with the
# overlay feature and strips them); other sources are relative to this manifest.
# Layout mirrors the RPM and the AUR package: three binaries to /usr/bin, both
# user units to /usr/lib/systemd/user, and ring's statically linked license
# texts shipped under their UPSTREAM tree layout (ring/... with the once_cell
# polyfill and fiat sub-paths) so the cross-references inside ring's own
# LICENSE manifest resolve, plus a DEP-5 copyright covering Voisu (MIT) and ring
# (ISC / Apache-2.0 / BSD-3-Clause / MIT).
assets = [
    ["target/release/voisu", "usr/bin/", "755"],
    ["target/release/voisu-daemon", "usr/bin/", "755"],
    ["target/release/voisu-overlay", "usr/bin/", "755"],
    ["../../packaging/voisu.service", "usr/lib/systemd/user/", "644"],
    ["../../packaging/voisu-overlay.service", "usr/lib/systemd/user/", "644"],
    ["../../packaging/voisu.desktop", "usr/share/applications/", "644"],
    ["../../packaging/deb/lintian-overrides", "usr/share/lintian/overrides/voisu", "644"],
    ["../../packaging/deb/copyright", "usr/share/doc/voisu/copyright", "644"],
    ["../../packaging/deb/ring/LICENSE", "usr/share/doc/voisu/ring/LICENSE", "644"],
    ["../../packaging/deb/ring/LICENSE-BoringSSL", "usr/share/doc/voisu/ring/LICENSE-BoringSSL", "644"],
    ["../../packaging/deb/ring/LICENSE-other-bits", "usr/share/doc/voisu/ring/LICENSE-other-bits", "644"],
    ["../../packaging/deb/ring/src/polyfill/once_cell/LICENSE-APACHE", "usr/share/doc/voisu/ring/src/polyfill/once_cell/LICENSE-APACHE", "644"],
    ["../../packaging/deb/ring/src/polyfill/once_cell/LICENSE-MIT", "usr/share/doc/voisu/ring/src/polyfill/once_cell/LICENSE-MIT", "644"],
    ["../../packaging/deb/ring/third_party/fiat/LICENSE", "usr/share/doc/voisu/ring/third_party/fiat/LICENSE", "644"],
    ["../../README.md", "usr/share/doc/voisu/README", "644"],
]

[[bin]]
name = "voisu"
path = "src/bin/voisu.rs"

[[bin]]
name = "voisu-daemon"
path = "src/bin/voisu-daemon.rs"

[[bin]]
name = "voisu-overlay"
path = "src/bin/voisu-overlay.rs"
required-features = ["overlay"]

[features]
overlay = ["dep:gtk4", "dep:gtk4-layer-shell"]

[dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
libc = "0.2"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
voisu-core = { path = "../voisu-core" }
xkbcommon = { version = "0.9", default-features = false }
zbus = { version = "5.13.2", default-features = false, features = ["tokio"] }
gtk4 = { version = "0.11", features = ["v4_10"], optional = true }
gtk4-layer-shell = { version = "0.8", optional = true }
flacenc = { version = "0.5.1", default-features = false }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tungstenite = "0.24"
zbus = { version = "5.13.2", default-features = false, features = ["tokio"] }
