[package]
name = "voisu-core"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time", "test-util"] }
tempfile = "3"
